--- a/src/app.scss
+++ b/src/app.scss
@@ -3,37 +3,37 @@
 @import '~@blueprintjs/icons/lib/css/blueprint-icons.css';
 
 #root{
-    background-color: rgb(223, 250, 248);
+    background-color: rgb(117, 231, 167);
     height: 100vh;
   }
   .App {
     text-align: center;
-    background-color: rgb(223, 250, 248);
+    background-color: rgb(117, 231, 167);
   }
   
   .App-header {
-    background-color: #282c34;
+    background-color: #4e6dab;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: rgb(196, 10, 10);
   }
   
   .container{
     display: flex;
-    align-items: center;
+    align-items: right;
     flex-direction: column;
     align-items: center;
   }
   
   .card-form{
-    width: 500px;
+    width: 900px;
     margin-bottom: 15px;
     padding: 5px;
-    background-color: #abb5b9;
+    background-color: #71cef3;
   }
   
   .list-container{
@@ -50,7 +50,7 @@
     margin-left:  5px;
     margin-top: 15px;
     width: 25%;
-    background-color: #52477f;
+    background-color: #431ed9;
     color: white;
   }
   
@@ -61,10 +61,10 @@
   }
   
   .signOut{
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 300px;
+    margin-left: 30px;
     padding: 5px;
-    background-color: rgb(219, 18, 18);
+    background-color: rgb(95, 51, 83);
     color: white;
     border: none;
     border-radius: 5px;
